Added and modified several files

--- a/wrangle_lesson.ipynb
+++ b/wrangle_lesson.ipynb
@@ -2372,7 +2372,7 @@
    "id": "27e3fdb1-c55e-4a2b-b283-d514e9a65e17",
    "metadata": {},
    "source": [
-    "    \n",
+    "Write a function that takes in a dataframe and returns a dataframe with 3 columns: the number of columns missing, percent of columns missing, and number of rows with n columns missing. Run the function and document takeaways from this on how you want to handle missing values.    \n",
     "## Acquire (acquire.py)\n",
     "\n",
     "### Zillow\n",
